Base Kubernetes Implementation
